--- a/style.css
+++ b/style.css
@@ -59,3 +59,9 @@ ul li {
   padding: 30px 0px 30px 0px;
   color: #858585;
 }
+.timmer {
+  font-size: 25px;
+  border: 1px dotted;
+  border-radius: 5px;
+  padding: 9px;
+}
