--- a/style.css
+++ b/style.css
@@ -1,19 +1,11 @@
 .row {
   display: flex;
 }
-.row .col-10 {
-  width: 80%;
-  padding: 20px;
-  margin: 5px;
-  position: relative;
-  height: calc(100vh - 300px);
-  overflow: auto;
-  border-radius: 8px;
+.container-fluid {
+  max-width: 1280px;
 }
-.row .col-2 {
-  width: 20%;
-  padding: 20px;
-  margin: 5px;
+#question-container {
+  padding: 30px;
 }
 ul {
   list-style: none;
@@ -25,8 +17,7 @@ ul li {
 .btn-box {
   display: flex;
   justify-content: space-between;
-  position: absolute;
-  bottom: 20px;
+  margin-top: 15px;
 }
 .shadow {
   -webkit-box-shadow: 3px 3px 5px 6px #ccc; /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
@@ -34,25 +25,24 @@ ul li {
   box-shadow: 3px 3px 5px 6px #ccc; /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */
 }
 #questions-indexing {
-  background: #97928c61;
-  top: -19px;
+  background: #e2e3e5;
   position: relative;
   padding: 20px;
   border-radius: 8px;
+  margin-bottom: 10px;
 }
 #questions-indexing button {
-  margin: 5px;
-  width: 30px;
+  margin: 9px;
+  width: 31px;
+  height: 31px;
 }
 .footer {
   position: fixed;
-  left: 0;
   bottom: 0;
+  left: 0;
   width: 100%;
-  background-color: red;
-  color: white;
-  text-align: center;
-  color: #ccc;
+  height: 100px;
+  background-color: #f5f5f5;
 }
 .copyright {
   background-color: #222222;
@@ -64,4 +54,89 @@ ul li {
   border: 1px dotted;
   border-radius: 5px;
   padding: 9px;
+}
+.btn-circle {
+  text-align: center;
+  padding: 0 !important;
+  font-size: 12px;
+  line-height: 1.428571429;
+  border-radius: 15px !important;
+}
+.footer .btn {
+  border: 2px solid white;
+  border-radius: 100px;
+  height: 40px;
+  width: 125px;
+}
+
+#submit-btn {
+  width: 100%;
+}
+
+/*Radio box*/
+
+input[type="radio"] + .label-text:before {
+  content: "\f10c";
+  font-family: "FontAwesome";
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  width: 1em;
+  display: inline-block;
+  margin-right: 5px;
+}
+
+input[type="radio"]:checked + .label-text:before {
+  content: "\f192";
+  color: #8e44ad;
+  animation: effect 250ms ease-in;
+}
+
+input[type="radio"]:disabled + .label-text {
+  color: #aaa;
+}
+
+input[type="radio"]:disabled + .label-text:before {
+  content: "\f111";
+  color: #ccc;
+}
+
+/*Radio Toggle*/
+
+.toggle input[type="radio"] + .label-text:before {
+  content: "\f204";
+  font-family: "FontAwesome";
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  width: 1em;
+  display: inline-block;
+  margin-right: 10px;
+}
+
+.toggle input[type="radio"]:checked + .label-text:before {
+  content: "\f205";
+  color: #16a085;
+  animation: effect 250ms ease-in;
+}
+
+.toggle input[type="radio"]:disabled + .label-text {
+  color: #aaa;
+}
+
+.toggle input[type="radio"]:disabled + .label-text:before {
+  content: "\f204";
+  color: #ccc;
+}
+input[type="radio"] {
+  position: absolute;
+  right: 9000px;
 }
