--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ ul li {
   background: #e2e3e5;
   position: relative;
   padding: 20px;
-  border-radius: 8px;
+  border-radius: 0.25rem;
   margin-bottom: 10px;
 }
 #questions-indexing button {
